kube/gcp/ocr/ocr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocr
  namespace: chunkmydocs
  labels:
    app.kubernetes.io/name: ocr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ocr
  template:
    metadata:
      namespace: chunkmydocs
      labels:
        app.kubernetes.io/name: ocr
    spec:
      containers:
      - name: ocr
        image: luminainc/ocr:616fdd68
        imagePullPolicy: Always
        securityContext:
          privileged: true
          capabilities:
            add: ["SYS_ADMIN"]
