kube/gcp/ocr/ocr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocr-service
  namespace: chunkmydocs
  labels:
    app.kubernetes.io/name: ocr
  annotations:
    cloud.google.com/backend-config: '{"default": "ocr-backendconfig"}'
spec:
  selector:
    app.kubernetes.io/name: ocr
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
